force-app/main/default/objects/Asset/fields/Critical_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Critical_Threshold__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Critical Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>