force-app/main/default/objects/Asset/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Health</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>