force-app/main/default/objects/Asset/fields/Solar_Panel_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Solar_Panel_Serial_Number__c</fullName>
    <label>Solar Panel Serial Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>