force-app/main/default/objects/Asset/fields/Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Warning_Threshold__c</fullName>
    <defaultValue>75</defaultValue>
    <label>Warning Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>